fix #4, add LISTEN_PORT in settings

--- a/src/renderer/desktop.css
+++ b/src/renderer/desktop.css
@@ -1,9 +1,9 @@
-div#header {
+div#red-ui-header {
     -webkit-app-region: drag;
     -webkit-user-select: none;
 }
 
-ul.header-toolbar.hide {
+ul.red-ui-header-toolbar.hide {
     -webkit-app-region: no-drag;
 }
 
